# scriptoria-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.multi-python  README.md  RITUALS.md  docker-compose.yml  docker_demo.py  file_manager.py  main.py  pyproject.toml  requirements.txt  scriptoria_move_test.py  setup.py  test-docker.sh
.github/workflows/: ci.yml
docs/: DESIGN-DIRECTION-ACCESSIONS-DESK.md  DESIGN-DIRECTION.md
scriptoria/: __init__.py  accessions.py  api.py  config.py  file_manager.py  library_client.py  mcp_server.py  scriptorium.py
scripts/: nightly_digest.sh  scriptorium_sweep.py
tests/: test_accessions.py  test_api.py  test_api_auth.py  test_file_manager.py  test_inbox.py  test_openapi_gpt_compat.py  test_scriptorium.py
