[project]
name = "scriptoria-agent"
version = "1.0.0"
description = "Scriptoria — the librarian of Cortex OS (The Library). Agent shell: MCP server, REST API for GPT actions, and the scriptorium drafting workspace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.2",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyfakefs>=6.2.0",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
scriptoria-mcp = "scriptoria.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scriptoria"]
